fix a layout issue for the empty event notice

--- a/src/event/EventPage.module.scss
+++ b/src/event/EventPage.module.scss
@@ -19,6 +19,8 @@
 }
 
 .empty {
+  margin-top: 1rem;
+
   display: flex;
   align-items: center;
 
